---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! bug.tex\n\\documentclass{article}\n\\newcommand{\\ö}{foo}\n\\newcommand{\\öö}{bar}\n\\newcommand{\\ööabc}{baz}\n\\begin{document}\n\\ö\n  |\n ^\n\\end{document}\n\"#)"
---
[
  {
    "label": "ö",
    "detail": "user-defined",
    "preselect": false
  },
  {
    "label": "öö",
    "detail": "user-defined",
    "preselect": false
  },
  {
    "label": "ööabc",
    "detail": "user-defined",
    "preselect": false
  }
]
